durga@48demo.com.bleadtest/src/objects/Booth__c.object
<CustomObject>
    <fields>
        <fullName>BLP_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing</label>
        <referenceTo>BL_Pricing__c</referenceTo>
        <relationshipLabel>Booth</relationshipLabel>
        <relationshipName>Booth</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BT_BoothUserCount__c</fullName>
        <defaultValue>100</defaultValue>
        <label>BoothUserCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BT_ContactEmail__c</fullName>
        <label>ContactEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BT_ContactName__c</fullName>
        <label>ContactName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BT_ContactPhone__c</fullName>
        <label>ContactPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BT_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BT_Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BT_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BT_PDFLocation__c</fullName>
        <label>PDFLocation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BT_Phone__c</fullName>
        <label>PhoneNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BT_RegistrationLink__c</fullName>
        <label>RegistrationLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BT_WebsiteURL__c</fullName>
        <label>WebsiteURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BT_isBoothActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isBoothActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Booth</relationshipLabel>
        <relationshipName>Booth</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <label>Booth</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BT_Name__c</columns>
        <columns>BT_BoothUserCount__c</columns>
        <columns>EV_id__c</columns>
        <columns>BT_isBoothActive__c</columns>
        <columns>BLP_id__c</columns>
        <columns>BT_Location__c</columns>
        <columns>BT_Description__c</columns>
        <columns>BT_PDFLocation__c</columns>
        <columns>IsUpdated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BT_{00000000}</displayFormat>
        <label>Booth Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booth</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>